--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -67,6 +67,17 @@ body
   padding-top 10px
   a
     color #090909
+  img
+    max-width 100%
+  blockquote
+    background-color #f7f7f7
+    margin 0 0 14px
+    padding 10px 10px 10px 20px
+    p
+      margin-bottom 0
+    a
+      color #F51BA6
+
 
 .entry-list__entry
   max-width 720px
@@ -86,7 +97,7 @@ body
 
 .entry-description
   padding 15px 10px 20px
-  font-weight 500
+  font-weight 400
   line-height 1.66em
   p
     margin-bottom 12px
@@ -111,8 +122,12 @@ body
 
 .entry-content
   padding 0 10px 10px
-  font-weight 500
+  font-weight 400
   line-height 1.66em
+  blockquote
+
+  img
+    max-width 100%
   h2
     font-size 24px
     padding-top 20px
@@ -130,6 +145,14 @@ body
     li
       p
         margin-bottom 0
+  code
+    color #232323
+    background-color #f7f7f7
+    padding 8px
+    border 1px solid #f2f2f2
+    display block
+    font-family Consolas, "Liberation Mono", Menlo, Courier, monospace
+    font-weight normal
 
 
 
