--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -12,7 +12,6 @@ html(lang="ja")
     meta(property="og:type" content="article")
     meta(property="og:title" content="デブハゲ")
     meta(property="og:description" content="でぶはげ　めしくえ")
-    link(type="text/css" rel="stylesheet" href="/assets/stylesheets/main.css")
     link(title="デブハゲ" href="http://dev.hageee.net/feed" rel="alternate" type="application/rss+xml")
     
     
@@ -38,4 +37,7 @@ html(lang="ja")
         #js-content
         #js-paginator
         
-    script(type="text/javascript" charset="utf-8" src="/assets/javascripts/front.js")
+    
+
+    link(type="text/css" rel="stylesheet" href="/assets/stylesheets/main.css")
+    script(type="text/javascript" charset="utf-8" src="/assets/javascripts/front.js" async)
