--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -7,60 +7,30 @@ body
   font-family "Helvetica Neue" , Helvetica , Arial , Verdana , Roboto , "游ゴシック" , "Yu Gothic" , "游ゴシック体" , "YuGothic" , "ヒラギノ角ゴ Pro W3" , "Hiragino Kaku Gothic Pro" , "Meiryo UI" , "メイリオ" , Meiryo , "ＭＳ Ｐゴシック" , "MS PGothic" , sans-serif;
 
 .body-wrapper
-  padding-left 163px
   height 100%
 
-.main
-  width 720px
+.header-logo-container
+  padding 10px 0
 
-.sidebar
-  width 150px
-  z-index 1000
-  position fixed
-  left 150px
-  margin-left -150px
-  background #ffffff
-  height 100%
-  // border-right 3px solid #f7f7f7
-  border-style solid
-  border-width 0 3px 0 0
-  border-image url('/assets/images/side.png') 0 3 0 0 round
-
-.sidebar-inner
-  padding 10px
-
-.sidebar-logo
+.header-logo
+  font-size 42px
   text-align center
-
-.logo
   background-image url('/assets/images/logo.svg')
   background-repeat no-repeat
-  width 82px
+  background-size 320px 320px
+  background-position 3.5% 0
   height 0
+  padding-top 320px
   overflow hidden
-  padding-top 62px
-  display inline-block
+  display block
+  @media screen and (max-width: 769px)
+    font-size 24px
 
-.side-list
-  margin-top 10px
-
-.side-entry
-  font-size 13px
-  font-weight bold
-  border-bottom 1px solid #e2e2e2
-  cursor pointer
-  line-height 1.8em
-  a
-    display inline-block
-    color #090909
+.main
+  width 840px
+  margin 0 auto
+  @media screen and (max-width: 769px)
     width 100%
-    &:hover
-      text-decoration none
-  &:hover
-    background-color #F51BA6
-    border-bottom-color transparent
-    a
-      color #ffffff
 
 // えんとりー
 .entry-list, .entry-detail
@@ -80,18 +50,24 @@ body
 
 
 .entry-list__entry
-  max-width 720px
+  max-width 840px
   margin-bottom 50px
+  @media screen and (max-width: 769px)
+    max-width initial
 
 .entry-header
   padding 0 10px 10px
   border-bottom 5px solid #f2f2f2
   h1
     font-size 32px
+    @media screen and (max-width: 769px)
+      font-size 20px
 
 .entry-date
   font-size 12px
   font-weight 500
+  margin-top 8px
+
 .entry-tags
   display none
 
@@ -100,7 +76,7 @@ body
   font-weight 400
   line-height 1.66em
   p
-    margin-bottom 12px
+    margin-bottom 1.25rem
 
 
 .entry-list-more
@@ -113,6 +89,11 @@ body
     &:hover
       background-color #F51BA6
       text-decoration none
+  @media screen and (max-width: 769px)
+    padding-left 0
+    .entry-list-more__entry
+      display block
+      text-align center
 
 .entry-detail
   .entry-description
@@ -138,13 +119,14 @@ body
     font-size 18px
     margin-bottom 14px
   p
-    margin-bottom 14px
+    margin-bottom 1.25rem
   ul
     list-style-position inside
     margin-bottom 12px
     li
       p
         margin-bottom 0
+        display inline
   code
     color #232323
     background-color #f7f7f7
@@ -197,10 +179,8 @@ body
 .footer
   font-size 10px
   color #090909
-  position absolute
-  bottom 5px
-  left 10px
-  width 130px
+  text-align center
+  padding 5px 0
 
 .sidebar-about-icon
   width 40px
