--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -12,21 +12,8 @@ body
 .header-logo-container
   padding 10px 0
 
-.header-logo
-  font-size 42px
-  text-align center
-  background-image url('/assets/images/logo.svg')
-  background-repeat no-repeat
-  background-size 320px 320px
-  background-position 3.5% 0
-  height 0
-  padding-top 320px
-  overflow hidden
-  display block
-  @media screen and (max-width: 769px)
-    font-size 24px
 
-.main
+.app-main
   width 840px
   margin 0 auto
   @media screen and (max-width: 769px)
@@ -181,59 +168,3 @@ body
   color #090909
   text-align center
   padding 5px 0
-
-.sidebar-about-icon
-  width 40px
-  border-radius 40px
-
-  border 4px solid #e2e2e2
-  position absolute
-  bottom 45px
-  left 50%
-  margin-left -20px
-  overflow hidden
-  cursor pointer
-  img
-    width 100%
-    vertical-align middle
-
-.sidebar-about-content
-  font-size 12px
-  color #090909
-  background-color #e2e2e2
-  border-radius 4px
-  padding 5px
-  position absolute
-  bottom 105px
-  left 10px
-  width 120px
-  opacity 0
-  visibility hidden
-  ul
-    list-style none
-    line-height 1.6em
-  &:after
-    display block
-    content ""
-    width 0
-    height 0
-    border-style solid
-    border-width 10px 10px 0 10px
-    border-color #e2e2e2 transparent transparent transparent
-    position absolute
-    margin-left -10px
-    left 50%
-    bottom -10px
-
-.sidebar-about-content.current
-  opacity 1
-  visibility visible
-  animation aboutVisible 0.17s ease 0s 1
-
-@keyframes aboutVisible
-  0%
-    opacity 0.2
-    transform translateY(8px)
-  100%
-    opacity 1
-    transform translateY(0)
